@@ -8,12 +8,12 @@
 #
 
 # Change path to the GForge directory.
-GFORGE="/path/to/gforge"
+GFORGE="/var/www/gforge/gforge"
 
 # Change paths to the GForge directory.
 # Don't reference $GFORGE because this won't work!
 # You may need to change the pathname to php CLI (command line interface)
-PHP="/usr/bin/php4 -d include_path=.:/path/to/gforge:/path/to/gforge/www/include:/etc/gforge/"
+PHP="/usr/bin/php4 -d include_path=.:/var/www/gforge/gforge:/var/www/gforge/gforge/www/include:/etc/gforge"
 
 # Don't mail command output to anyone.
 MAILTO=""
