@@ -16,6 +16,9 @@ require_once('www/frs/include/frs_utils.php');
 if (session_loggedin()) {
 	$group_id = getIntFromRequest('group_id');
 	$filemodule_id = getIntFromRequest('filemodule_id');
+	$start = getIntFromRequest('start');
+	$stop = getIntFromRequest('stop');
+	
 	if ($group_id && $filemodule_id) {
 		//
 		//  Set up local objects
