@@ -856,7 +856,7 @@ if (isset($params['group']) && $params['group']) {
 		global $Language;
 		 // display the searchmask
 		print '
-		<form name="advancedsearch" action="'.$PHP_SELF.'" method="post">
+		<form name="advancedsearch" action="'.getStringFromServer('PHP_SELF').'" method="post">
 		<input type="hidden" name="search" value="1"/>
 		<input type="hidden" name="group_id" value="'.$group_id.'"/>
 		<div align="center"><br />
