@@ -28,10 +28,10 @@
 require_once('pre.php');
 require_once('www/scm/include/scm_utils.php');
 
+$group_id = getIntFromRequest('group_id');
+
 // Check permissions
 session_require(array('group'=>$group_id,'admin_flags'=>'A'));
-
-$group_id = getIntFromRequest('group_id');
 
 scm_header(array('title'=>$Language->getText('scm_index','scm_repository'),'group'=>$group_id));
 
